Pushing Latest Changes a) Added Service Listing Activity b) Updated LocationActivity to not show services. c) Introduced new Ui elements
Signed-off-by: enggaloksingh <aloksingh.itbhu@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,6 @@
     ]]>
     </string>
     <string name="title_activity_user_cars_activty">UserCarsActivty</string>
+    <string name="title_item_list">Items</string>
+    <string name="title_item_detail">Item Detail</string>
 </resources>
